// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComplianceScore returns 1`] = `
<Text>
  <Tooltip
    content="The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy."
  >
    <CompliantIcon
      compliant={false}
      key="system-compliance-icon-undefined"
      rulesFailed={28}
      rulesPassed={24}
      score={10}
      supported={true}
    />
     10%
  </Tooltip>
</Text>
`;

exports[`DetailsLink returns 1`] = `
<SystemLink
  id="d5bc2459-21ce-4d11-bc0b-03ea7513dfa6"
>
  View Report
</SystemLink>
`;

exports[`FailedRules returns 1`] = `
<SystemLink
  id="d5bc2459-21ce-4d11-bc0b-03ea7513dfa6"
>
  28
</SystemLink>
`;

exports[`LastScanned returns 1`] = `
<DateFormat
  date={1574346739000}
  type="relative"
/>
`;

exports[`LastScanned returns NEVER 1`] = `"Never"`;

exports[`Name returns 1`] = `
<TextContent>
  demo.example.com
</TextContent>
`;

exports[`Policies returns 1`] = `
<Truncate
  inline={true}
  length={215}
  text="HIPAA Policy"
/>
`;

exports[`Policies returns without error without policies 1`] = `""`;

exports[`SSGVersion returns 1`] = `
<UnsupportedSSGVersion
  messageVariant="singular"
>
  Not available
</UnsupportedSSGVersion>
`;

exports[`SSGVersion returns no error without testResultProfiles 1`] = `
<UnsupportedSSGVersion
  messageVariant="singular"
>
  Not available
</UnsupportedSSGVersion>
`;
